[package]
name = "knorpelsolve"
version = "0.1.0"
edition = "2024"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

[lib]
crate-type = ["cdylib"]
name = "knorpelsolve"

[dependencies]
good_lp = { version = "1.14.2", default-features = false, features = ["highs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
